src/styles/App.scss
$primary-color: #eaaa00;
$secondary-color: #003057;
$third-color: #b3a369;

$item-name-font-size: 1.5em;
$item-inner-spacing: 0.3em;
$item-horizontal-padding: 0.05em;
$intersectional-padding: 0.3em;

$primary-font-size: 1em;
$secondary-font-size: 0.8em;
$notes-font-size: 0.7em;

$paper-width: 8.5in;
$paper-height: 11in;

body {
  background: rgb(224, 223, 223);
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}

.cv-page {
  background: white;
  display: block;
  border-radius: 25px;
  margin: 0.5cm auto 0.5cm;
  box-shadow: 0 1px 0 0 #ffffff inset, 0 1px 2px 0 #cccccc;
  max-width: $paper-width;
  box-sizing: border-box;
  padding: 0.5cm;
  position: relative;
  z-index: 0;

  .resume {
    height: $paper-height;
    padding-bottom: 0;
  }

  header {
    div {
      vertical-align: bottom;

      h1 {
        margin-top: 0;
        margin-right: 1em;
        margin-bottom: 0;
        display: inline-block;
      }

      .info {
        display: inline-block;
        color: $third-color;
        vertical-align: bottom;
        margin-bottom: 0;

        a {
          color: $secondary-color;
        }
      }
    }
  }

  .section-header {
    color: $primary-color;
    font-size: 1.3em;
    line-height: 1em;
    color: $secondary-color;
    border-bottom: solid $third-color 2px;
    padding-top: $intersectional-padding;
    padding-left: $item-horizontal-padding;
    padding-right: $item-horizontal-padding;
  }

  .logo {
    position: absolute;
    top: 2em;
    right: 3em;
    z-index: -1;
    opacity: 0.1;
    width: 17em;
  }

  .item {
    position: relative;
    margin-top: 0.25em;
    padding-left: $item-horizontal-padding;
    padding-right: $item-horizontal-padding;

    .name {
      margin-top: 0;
      margin-bottom: 0;
      font-size: $primary-font-size;
      max-width: calc(100% - 5em);
    }

    .date {
      position: absolute;
      right: $item-horizontal-padding;
      top: 0;
      line-height: 1.5em;
      font-size: $secondary-font-size;
    }

    .notes {
      margin-top: 0;
      margin-bottom: 0;
      font-size: $notes-font-size;
    }

    .notes * {
      margin-top: 0;
      margin-bottom: 0;
      line-height: 1.2em;

      ul li {
        margin-top: 0;
      }
    }
  }

  .skill {
    .section-header {
      margin-bottom: 0.3em;
    }

    .skill-item {
      margin-top: -0.2em;

      p {
        font-size: 0.8em;
        margin-bottom: 0;
      }
    }
  }

  .courseWork {
    .section-header {
      margin-bottom: 0.3em;
    }

    .courseWork-item {
      margin-top: -0.2em;

      p {
        font-size: 0.7em;
        margin-bottom: 0;
      }
    }
  }

  .publication-item {
    .name {
      font-size: $primary-font-size;
      a {
        font-weight: 400;
      }
    }

    .authors {
      font-size: 0.8em;
      margin-bottom: 0;

      a {
        color: black;

        &.publication-me {
          color: $primary-color;
        }
      }
    }

    .venue {
      font-size: 0.7em;
      margin-bottom: 0;
      font-style: italic;
    }
  }
}

.cv-page > section a {
  color: $primary-color;
}

/* Experiences */
.experience-item .experience-company.company,
.experience-location.location {
  margin-top: 0;
  margin-bottom: $item-inner-spacing;
  display: inline-block;
  color: $secondary-color;
  font-size: $secondary-font-size;
  line-height: $secondary-font-size;
  font-weight: normal;
  margin-right: 0.7em;
}

.experience-skills.skills {
  margin-top: 0;
  margin-bottom: 0;
  color: $third-color;
  display: inline-block;
  font-size: $notes-font-size;
  line-height: $notes-font-size;
  font-weight: normal;
}

.meta-row {
  line-height: 0.7em;
}

.experience-item .experience-company {
  margin-right: 0.5em;
}

.project-skills.skills {
  margin-top: 0;
  margin-bottom: 0;
  color: $third-color;
  display: inline-block;
  font-size: $notes-font-size;
  line-height: $notes-font-size;
  font-weight: normal;
}

section p.award-awarded-by {
  font-size: $secondary-font-size;
  line-height: $secondary-font-size;
  margin-bottom: $item-inner-spacing;
  color: $primary-color;
}

span.bold {
  font-weight: bold;
}

.toolbar {
  position: absolute;
  right: calc((100vw - #{$paper-width}) / 2 - 11em);
  width: 10em;
  max-width: calc((100vw - #{$paper-width}) / 2 - 2em);
  box-sizing: border-box;
  min-width: 150px;

  .toolbar-paper {
    border-radius: 15px;

    padding: 0.5em;
    width: 100%;

    button {
      width: 100%;
    }

    div.should-feature {
      margin-bottom: -15px;
    }

    div.should-feature > span {
      position: relative;
      top: -5px;
    }
  }
}

.show-mobile {
  display: none;
}

.show-desktop {
  display: unset;
}

/* Print Styling */
@page {
  size: letter;
  margin: 0;
}

@media only screen and (max-width: 700px) {
  .toolbar {
    display: none;
  }

  .item > .date {
    position: relative;
    right: 0;
  }

  .item > .name {
    max-width: 100%;
  }

  .show-mobile {
    display: unset;
  }

  .show-desktop {
    display: none;
  }
}

@media print {
  body {
    margin: 0;
    padding: 0;
  }

  .cv-page {
    border: none;
    box-shadow: none;
    margin: 0;

    width: $paper-width;
    overflow: hidden;
  }

  .hide-print {
    display: none;
  }

  .toolbar {
    display: none;
  }

  .cv-page.resume {
    height: $paper-height;
  }

  .toolbar {
    display: none;
  }
}

